--- a/style.css
+++ b/style.css
@@ -255,3 +255,67 @@ div.iconWrapper {
 .noDisplay {
     display: none;
 }
+
+/* liked items page */
+#likedItemsList, #cartItemsList {
+    width: 1000px;
+    max-width: 100%;
+    margin: auto;
+}
+.doneList {
+    width: 1000px;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 20px 80px;
+
+    margin-bottom: 20px;
+    
+    cursor: pointer;
+
+    background-color: rgb(255, 246, 233);
+    transition: ease all 0.3s;
+}
+.doneList:hover {
+    background-color: rgb(255, 231, 197);
+    transform: scale(1.1);
+    transition: ease all 0.3s;
+}
+.doneList0 {
+    width: 1000px;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 80px;
+    margin-bottom: 20px;
+}
+.likedTitle0 {
+    font-weight: 900;
+    font-size: 2em;
+    text-decoration: underline;
+}
+.likedPrice, .likedTitle {
+    cursor: pointer;
+    font-size: 1.5em;
+    font-weight: 600;
+}
+#goToCart, #checkoutBtn {
+    background-color: orange;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    transition: ease all 0.3s;
+    font-weight: 600;
+
+    position: fixed;
+    right: 50px;
+    bottom: 5vh;
+}
+#goToCart:hover, #checkoutBtn:hover {
+    background-color: rgb(255, 207, 119);
+    cursor: pointer;
+    transition: ease all 0.3s;
+}
