--- a/style.css
+++ b/style.css
@@ -159,7 +159,8 @@ button.shop:hover {
     opacity: 0;
     transform: translateY(-5px);
     transition: ease all 0.5s;
-    z-index: 0;
+    z-index: -1;
+    display: none;
 }
 .ddContent {
     background-color: rgb(173, 103, 24);
@@ -178,6 +179,7 @@ button.shop:hover {
     transform: translateY(0px);
     transition: ease all 0.5s;
     z-index: 999;
+    display: flex;
 }
 .dd {
     background: transparent;
@@ -362,6 +364,9 @@ div.iconWrapper {
     display: inline;
     width: max-content;
 }
+input, select {
+    border-radius: 5px;
+}
 
 /* mobile compatibility */
 .mobile {
@@ -408,4 +413,41 @@ div.iconWrapper {
 /* safari stuff??? */
 a {
     color: black;
+}
+
+/*modal for checkout*/
+#modalbg {
+    position: fixed;
+    bottom: 0vh;
+    left: 0vh;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(170, 170, 170, 0.75);
+    z-index: 999;
+}
+.modal {
+    position: relative;
+    top: 15vh;
+    margin: auto;
+    width: 600px;
+    height: 60vh;
+    border: 1px solid black;
+    background-color: #ddd;
+    border-radius: 20px;
+}
+.modalTitle {
+    font-size: 3em;
+    text-align: center;
+    margin-top: 3vh;
+    margin-bottom: 5vh;
+}
+.modalText1 {
+    margin-left: 10px;
+    font-weight: 600;
+}
+.modalText2 {
+    margin-left: 10px;
+}
+.closeText {
+    margin-left: 10px;
 }
